@@ -1,5 +1,7 @@
 [Changes 1.2.2]
 
+* Add save_dllvar() function exported to modules. (caf)
+
 * Shitlist level 3/4 should kick regardless of /CSET KICK_IF_BANNED. 
   Reported by Ancient. (caf)
 
